# finlearn-analytics

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
finlearn/: __init__.py  benchmarks.py  biases.py  memo.py  metrics.py  utils.py
tests/: test_biases.py  test_core.py
